"Added carList tag in app.component.html create an array of 4 car items in carListComponent Add 4 CarItem tags in car-list.component.html create input property in carItemComponent for car data"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html >
 <html>
-<head></head>
+<head><title> Assignment 2</title></head>
 <body>
+
+<app-car-list> </app-car-list>
+
 <div *ngFor ="let car of carList">
   <div>
     <h2>{{car.make}}{{car.model}}</h2>
