"use one way binding to pass car data to carItemComponent"

--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,5 +1,4 @@
 <p>car-list works!</p>
-<app-car-list-item></app-car-list-item>
-<app-car-list-item></app-car-list-item>
-<app-car-list-item></app-car-list-item>
-<app-car-list-item></app-car-list-item>
+<div>
+<app-car-list-item *ngFor="let car of cars" [car]="car"></app-car-list-item>
+</div>
