"Updated CarListComponent to display car details with 2px border and header tag for car make and model"

--- a/src/app/car-list-item/car-list-item.component.html
+++ b/src/app/car-list-item/car-list-item.component.html
@@ -1,1 +1,7 @@
 <p>car-list-item works!</p>
+<div class="carList-item">
+  <h1>{{car?.make}}</h1>
+  <h2>{{car?.model}}</h2>
+  <p>Year:{{car?.year}}</p>
+  <p>Color:{{car?.color}}</p>
+</div>
