--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
 
 <div *ngFor ="let car of carList">
   <div>
-    <h2>{{car.make}}{{car.model}}</h2>
+    <h2>{{car.make}}</h2>
+    <h3>madel:{{car.model}}</h3>
     <p>Year: {{car.year}}</p>
     <p>Color:{{car.color}}</p>
     <p *ngIf="car.isFav">Favourite</p>
