--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,5 +1,5 @@
-<p>car-list works!</p>
-<h1>Car List</h1>
-<div *ngFor="let car of cars">
-<app-car-list-item [car]="car"></app-car-list-item>
-</div>
+<app-car-list-item [car]="cars[0]"></app-car-list-item>
+<app-car-list-item [car]="cars[1]"></app-car-list-item>
+<app-car-list-item [car]="cars[2]"></app-car-list-item>
+<app-car-list-item [car]="cars[3]"></app-car-list-item>
+
