--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html >
-<html>
-<head><title> Assignment 2</title></head>
-<body>
-
-<app-car-list> </app-car-list>
-
-
-</body>
-</html>
+<div class="app-container">
+  <h1>{{title}}</h1>
+  <app-car-list></app-car-list>
+</div>
