--- a/src/app/car-list/car-list.component.css
+++ b/src/app/car-list/car-list.component.css
@@ -1,7 +1,18 @@
 .carList-item{
-  border: 2px cadetblue;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  background-color: lightblue;
+  text-align: center;
 }
+
+
+.container{
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  border: 1px solid #000;
+  background-color: cadetblue;
+  color: white;
+}
+
+.
+
+
