"Completed Assignment Five"

--- a/src/app/car-list-item/car-list-item.component.html
+++ b/src/app/car-list-item/car-list-item.component.html
@@ -3,4 +3,6 @@
   <h2>{{car.model}}</h2>
   <p>Year:{{car.year}}</p>
   <p>Color:{{car.color}}</p>
+  <img [src]="car.imageUrl" alt="car Image" width="200px">
+
 </div>
